--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "3.1.2",
     "jade": "*",
-    "mongojs": "~0.7.4"
+    "mongojs": "~0.7.4",
+    "underscore.string": "~2.3.1",
+    "underscore": "~1.4.4"
   }
 }
