--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "mongojs": "~0.7.4",
     "underscore.string": "~2.3.1",
     "underscore": "~1.4.4"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
